# openclaw-trace

./: .gitignore  AGENTS.md  DESIGN_NOTES.md  ORACLE_EXAMPLES.md  README.md  claude_transcript.py  pyproject.toml  rollup.json  rollup.md  signal_validity_results_validity_20260202_002134.json  voice_triage.py
.agents/template/: PLAN.md
docs/: architecture.md  frontend_spec.md  lobster-analysis.md  slides_hackathon.md
examples/: paper_program.py  paper_trace_program.py  self_check_detectors.py  self_check_redaction.py  self_check_rollup.py  self_check_signals.py  synthetic_nested_tool_events.jsonl  synthetic_signals.jsonl
experiments/: SIGNAL_CLASSIFICATION_EVAL.md  T154_RESEARCH_PAPER.md  UX_FRICTION_RESEARCH_PAPER.md  signal_classification_v2.py  signal_classification_v2_full.json  signal_classification_v2_results.json  signal_validity.py  signal_validity_results.json  signal_validity_v2.py  signal_validity_v2_full.json  signal_validity_v2_results.json  t154_baseline.json  t154_baseline_v2.json  t154_baseline_v3.json  t154_baseline_v4.json  t154_cron_timeout.py  ux_friction_analysis.json  ux_friction_cron_spam.py  workflow_details.py  workflow_extraction.py  workflow_patterns.json
hal-briefs/: .gitignore  README.md
openclaw_trace/: cli.py  embedding_client.py  mine_ideas.py  mine_signals.py  recursive_driver.py  redaction.py  rollup_signals.py  safe_exec.py  transcript.py
rlm_session_analyzer/: __init__.py  cli.py  llm_client.py  mine_ideas.py
scripts/: export_ticket_ir.py  run_daily_pipeline.sh  run_research_brief.py  ticket_rollup.py  triage_signals.py
(+46 files in other folders)
