[project]
name = "openclaw-trace"
version = "0.1.0"
description = "RLM-inspired analyzer for OpenClaw/Clawdbot session transcripts (jsonl)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.25",
]

[project.optional-dependencies]
embeddings = [
  "sqlite-vec>=0.1.0",
]

[project.scripts]
openclaw-trace = "openclaw_trace.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
